--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -129,3 +129,9 @@ footer a:hover {
     margin: 5px 0;
   }
 }
+
+.logo {
+  max-height: 60px;
+  vertical-align: middle;
+  margin-bottom: 10px;
+}
