--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -59,6 +59,15 @@ li {
   margin-bottom: 1rem;
 }
 
+a {
+  color: #3b82f6;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 footer p {
   margin: 0.5rem 0;
 }
