--- a/components/header.html
+++ b/components/header.html
@@ -1,11 +1,12 @@
 <header>
-  <div style="display: flex; justify-content: space-between; align-items: center;">
-    <img src="assets/images/Ludus_Mentis_Logo_Transparent.png" alt="Logo Ludus Mentis" height="50">
+  <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
+    <img src="assets/images/Ludus_Mentis_Logo_Transparent.png" alt="Logo Ludus Mentis">
     <nav>
       <a href="index.html">Accueil</a>
       <a href="concept.html">Concept</a>
       <a href="academie.html">Académie</a>
       <a href="a-propos.html">À propos</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </div>
 </header>
