--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,4 @@
 <footer>
-  <p>Contact : Antoine Billard &ndash; ludus.mentis.esport@gmail.com &ndash; 0474 25 40 37</p>
-  <p>&copy; 2025 Ludus Mentis. Tous droits réservés.</p>
+  <p>Contact : Antoine Billard &ndash; <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a> &ndash; 0474 25 40 37</p>
+  <p>&copy; 2025 Ludus Mentis. Tous droits réservés. <a href="mentions.html">Mentions légales</a></p>
 </footer>
