--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,10 @@
 <header>
-  <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
+  <div class="header-container">
     <img src="assets/images/Ludus_Mentis_Logo_Transparent.png" alt="Logo Ludus Mentis">
-    <nav>
+    
+    <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
+    <nav id="main-nav">
       <a href="index.html">Accueil</a>
       <a href="concept.html">Concept</a>
       <a href="academie.html">Académie</a>
