--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,8 @@
+
 <header>
-  <div class="header-container">
-    <img src="assets/images/Ludus_Mentis_Logo_Transparent.png" alt="Logo Ludus Mentis">
-    <nav id="main-nav">
+  <div style="display: flex; align-items: center; justify-content: space-between;">
+    <a href="index.html"><img src="assets/images/Ludus_Mentis_Logo_Transparent.png" alt="Logo Ludus Mentis" /></a>
+    <nav>
       <a href="index.html">Accueil</a>
       <a href="concept.html">Concept</a>
       <a href="academie.html">Académie</a>
