--- a/components/header.html
+++ b/components/header.html
@@ -8,6 +8,7 @@
       <a href="academie.html">Académie</a>
       <a href="a-propos.html">À propos</a>
       <a href="contact.html">Contact</a>
+      <a href="methodologie.html">Méthodologie</a>
     </nav>
   </div>
 </header>
