--- a/components/header.html
+++ b/components/header.html
@@ -10,6 +10,8 @@
       <a href="methodologie.html">Méthodologie</a>
       <a href="contact.html">Contact</a>
       
-    </nav>
+      <a href="faq.html">FAQ</a>
+  <a href="mentions.html">Mentions légales</a>
+</nav>
   </div>
 </header>
