--- a/components/header.html
+++ b/components/header.html
@@ -9,7 +9,9 @@
       <a href="academie.html">Académie</a>
       <a href="a-propos.html">À propos</a>
       <a href="methodologie.html">Méthodologie</a>
+      <a href="faq.html">FAQ</a>
       <a href="contact.html">Contact</a>
+      
     </nav>
     <button class="menu-toggle" id="menuToggle" aria-label="Ouvrir le menu">
       &#9776;
