--- a/components/header.html
+++ b/components/header.html
@@ -10,6 +10,7 @@
       <a href="a-propos.html">À propos</a>
       <a href="methodologie.html">Méthodologie</a>
       <a href="faq.html">FAQ</a>
+      <a href="enjeux.html">Enjeux & Sources</a>
       <a href="contact.html">Contact</a>
       
     </nav>
